src/main/java/org/example/jjava_main/_core/error/ex/Exception400.java
package org.example.jjava_main._core.error.ex;

public class Exception400 extends RuntimeException {
    public Exception400(String message) {
        super(message);
    }
}
